hw3/myCheckerParser.java
// $ANTLR 3.5 myChecker.g 2017-05-31 11:15:44

	import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class myCheckerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Arr", "CHAR", "COMMENT1", "COMMENT2", 
		"COMP", "DIGIT", "FLOAT", "FLOAT_NUMBER", "IF", "INT", "INT_NUMBER", "Id", 
		"LETTER", "LINE_COMMAND", "MAIN", "NEWLINE", "OPER", "STRING_LITERAL", 
		"TAB", "VOID", "WHILE", "WS", "'%'", "'&&'", "'('", "')'", "'*'", "'+'", 
		"'++'", "','", "'-'", "'--'", "'/'", "';'", "'='", "'\\''", "'else if('", 
		"'else'", "'if('", "'return'", "'while('", "'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int Arr=4;
	public static final int CHAR=5;
	public static final int COMMENT1=6;
	public static final int COMMENT2=7;
	public static final int COMP=8;
	public static final int DIGIT=9;
	public static final int FLOAT=10;
	public static final int FLOAT_NUMBER=11;
	public static final int IF=12;
	public static final int INT=13;
	public static final int INT_NUMBER=14;
	public static final int Id=15;
	public static final int LETTER=16;
	public static final int LINE_COMMAND=17;
	public static final int MAIN=18;
	public static final int NEWLINE=19;
	public static final int OPER=20;
	public static final int STRING_LITERAL=21;
	public static final int TAB=22;
	public static final int VOID=23;
	public static final int WHILE=24;
	public static final int WS=25;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCheckerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCheckerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[57+1];


	}

	@Override public String[] getTokenNames() { return myCheckerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myChecker.g"; }


		boolean TRACEON = false;
	    HashMap<String,Integer> symtab = new HashMap<String,Integer>();
		int attr_type;



	// $ANTLR start "program"
	// myChecker.g:20:1: program : ( LINE_COMMAND )* ( type_num | type_void ) MAIN '(' ')' '{' stats '}' ;
	public final void program() throws RecognitionException {
		int program_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return; }

			// myChecker.g:21:5: ( ( LINE_COMMAND )* ( type_num | type_void ) MAIN '(' ')' '{' stats '}' )
			// myChecker.g:21:9: ( LINE_COMMAND )* ( type_num | type_void ) MAIN '(' ')' '{' stats '}'
			{
			// myChecker.g:21:9: ( LINE_COMMAND )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==LINE_COMMAND) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// myChecker.g:21:9: LINE_COMMAND
					{
					match(input,LINE_COMMAND,FOLLOW_LINE_COMMAND_in_program77); if (state.failed) return;
					}
					break;

				default :
					break loop1;
				}
			}

			// myChecker.g:22:9: ( type_num | type_void )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==FLOAT||LA2_0==INT) ) {
				alt2=1;
			}
			else if ( (LA2_0==VOID) ) {
				alt2=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// myChecker.g:22:10: type_num
					{
					pushFollow(FOLLOW_type_num_in_program90);
					type_num();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// myChecker.g:22:21: type_void
					{
					pushFollow(FOLLOW_type_void_in_program94);
					type_void();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			match(input,MAIN,FOLLOW_MAIN_in_program96); if (state.failed) return;
			match(input,28,FOLLOW_28_in_program98); if (state.failed) return;
			match(input,29,FOLLOW_29_in_program100); if (state.failed) return;
			match(input,45,FOLLOW_45_in_program102); if (state.failed) return;
			pushFollow(FOLLOW_stats_in_program104);
			stats();
			state._fsp--;
			if (state.failed) return;
			match(input,47,FOLLOW_47_in_program106); if (state.failed) return;
			if ( state.backtracking==0 ) { if (TRACEON) System.out.println("VOID MAIN () {declarations stats}"); }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }

		}
	}
	// $ANTLR end "program"



	// $ANTLR start "stats"
	// myChecker.g:26:1: stats : ( stat )* ;
	public final void stats() throws RecognitionException {
		int stats_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return; }

			// myChecker.g:26:7: ( ( stat )* )
			// myChecker.g:26:9: ( stat )*
			{
			// myChecker.g:26:9: ( stat )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==CHAR||(LA3_0 >= FLOAT && LA3_0 <= FLOAT_NUMBER)||(LA3_0 >= INT && LA3_0 <= Id)||LA3_0==28||(LA3_0 >= 42 && LA3_0 <= 44)) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// myChecker.g:26:9: stat
					{
					pushFollow(FOLLOW_stat_in_stats127);
					stat();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop3;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, stats_StartIndex); }

		}
	}
	// $ANTLR end "stats"



	// $ANTLR start "stat"
	// myChecker.g:28:1: stat : ( declarations | assignment | whilestat | ifstat | returnstat | expr ';' );
	public final void stat() throws RecognitionException {
		int stat_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return; }

			// myChecker.g:28:6: ( declarations | assignment | whilestat | ifstat | returnstat | expr ';' )
			int alt4=6;
			switch ( input.LA(1) ) {
			case CHAR:
			case FLOAT:
			case INT:
				{
				alt4=1;
				}
				break;
			case Id:
				{
				int LA4_4 = input.LA(2);
				if ( (LA4_4==Arr||LA4_4==38) ) {
					alt4=2;
				}
				else if ( (LA4_4==COMP||LA4_4==OPER||(LA4_4 >= 26 && LA4_4 <= 27)||(LA4_4 >= 30 && LA4_4 <= 32)||(LA4_4 >= 34 && LA4_4 <= 37)||LA4_4==46) ) {
					alt4=6;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 44:
				{
				alt4=3;
				}
				break;
			case 42:
				{
				alt4=4;
				}
				break;
			case 43:
				{
				alt4=5;
				}
				break;
			case FLOAT_NUMBER:
			case INT_NUMBER:
			case 28:
				{
				alt4=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// myChecker.g:28:8: declarations
					{
					pushFollow(FOLLOW_declarations_in_stat141);
					declarations();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// myChecker.g:28:22: assignment
					{
					pushFollow(FOLLOW_assignment_in_stat144);
					assignment();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					// myChecker.g:28:34: whilestat
					{
					pushFollow(FOLLOW_whilestat_in_stat147);
					whilestat();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 4 :
					// myChecker.g:28:45: ifstat
					{
					pushFollow(FOLLOW_ifstat_in_stat150);
					ifstat();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 5 :
					// myChecker.g:28:53: returnstat
					{
					pushFollow(FOLLOW_returnstat_in_stat153);
					returnstat();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 6 :
					// myChecker.g:28:65: expr ';'
					{
					pushFollow(FOLLOW_expr_in_stat156);
					expr();
					state._fsp--;
					if (state.failed) return;
					match(input,37,FOLLOW_37_in_stat158); if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, stat_StartIndex); }

		}
	}
	// $ANTLR end "stat"



	// $ANTLR start "type_num"
	// myChecker.g:29:1: type_num returns [int attr_type] : ( INT | FLOAT );
	public final int type_num() throws RecognitionException {
		int attr_type = 0;

		int type_num_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return attr_type; }

			// myChecker.g:30:5: ( INT | FLOAT )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==INT) ) {
				alt5=1;
			}
			else if ( (LA5_0==FLOAT) ) {
				alt5=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return attr_type;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// myChecker.g:30:7: INT
					{
					match(input,INT,FOLLOW_INT_in_type_num173); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: INT");  attr_type = 1; }
					}
					break;
				case 2 :
					// myChecker.g:31:7: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_type_num184); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: FLOAT");  attr_type = 2; }
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 4, type_num_StartIndex); }

		}
		return attr_type;
	}
	// $ANTLR end "type_num"



	// $ANTLR start "type_char"
	// myChecker.g:34:1: type_char returns [int attr_type] : CHAR ;
	public final int type_char() throws RecognitionException {
		int attr_type = 0;

		int type_char_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return attr_type; }

			// myChecker.g:35:5: ( CHAR )
			// myChecker.g:35:7: CHAR
			{
			match(input,CHAR,FOLLOW_CHAR_in_type_char207); if (state.failed) return attr_type;
			if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: CHAR");  attr_type = 3; }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 5, type_char_StartIndex); }

		}
		return attr_type;
	}
	// $ANTLR end "type_char"



	// $ANTLR start "type_void"
	// myChecker.g:36:1: type_void returns [int attr_type] : VOID ;
	public final int type_void() throws RecognitionException {
		int attr_type = 0;

		int type_void_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return attr_type; }

			// myChecker.g:37:5: ( VOID )
			// myChecker.g:37:7: VOID
			{
			match(input,VOID,FOLLOW_VOID_in_type_void224); if (state.failed) return attr_type;
			if ( state.backtracking==0 ) { if (TRACEON) System.out.println("type: VOID");  attr_type = 4; }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 6, type_void_StartIndex); }

		}
		return attr_type;
	}
	// $ANTLR end "type_void"



	// $ANTLR start "declarations"
	// myChecker.g:39:1: declarations returns [int attr_type] : ( type_num a= Id ( '=' b= expr )? ( ',' c= Id ( '=' d= expr )? )* ';' | type_char a= Id ( '=' '\\'' ( . ) '\\'' )? ( ',' c= Id ( '=' '\\'' ( . ) '\\'' )? )* ';' | type_num Id Arr '=' '{' ( INT_NUMBER | FLOAT_NUMBER ) '}' ';' | ( type_num | type_char ) Id Arr ';' );
	public final int declarations() throws RecognitionException {
		int attr_type = 0;

		int declarations_StartIndex = input.index();

		Token a=null;
		Token c=null;
		Token Id3=null;
		Token Id5=null;
		ParserRuleReturnScope b =null;
		ParserRuleReturnScope d =null;
		int type_num1 =0;
		int type_char2 =0;
		int type_num4 =0;
		int type_num6 =0;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return attr_type; }

			// myChecker.g:40:5: ( type_num a= Id ( '=' b= expr )? ( ',' c= Id ( '=' d= expr )? )* ';' | type_char a= Id ( '=' '\\'' ( . ) '\\'' )? ( ',' c= Id ( '=' '\\'' ( . ) '\\'' )? )* ';' | type_num Id Arr '=' '{' ( INT_NUMBER | FLOAT_NUMBER ) '}' ';' | ( type_num | type_char ) Id Arr ';' )
			int alt13=4;
			switch ( input.LA(1) ) {
			case INT:
				{
				int LA13_1 = input.LA(2);
				if ( (LA13_1==Id) ) {
					int LA13_4 = input.LA(3);
					if ( (synpred13_myChecker()) ) {
						alt13=1;
					}
					else if ( (synpred19_myChecker()) ) {
						alt13=3;
					}
					else if ( (true) ) {
						alt13=4;
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return attr_type;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 13, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT:
				{
				int LA13_2 = input.LA(2);
				if ( (LA13_2==Id) ) {
					int LA13_5 = input.LA(3);
					if ( (synpred13_myChecker()) ) {
						alt13=1;
					}
					else if ( (synpred19_myChecker()) ) {
						alt13=3;
					}
					else if ( (true) ) {
						alt13=4;
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return attr_type;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 13, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA13_3 = input.LA(2);
				if ( (LA13_3==Id) ) {
					int LA13_6 = input.LA(3);
					if ( (synpred17_myChecker()) ) {
						alt13=2;
					}
					else if ( (true) ) {
						alt13=4;
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return attr_type;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 13, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return attr_type;}
				NoViableAltException nvae =
					new NoViableAltException("", 13, 0, input);
				throw nvae;
			}
			switch (alt13) {
				case 1 :
					// myChecker.g:40:7: type_num a= Id ( '=' b= expr )? ( ',' c= Id ( '=' d= expr )? )* ';'
					{
					pushFollow(FOLLOW_type_num_in_declarations242);
					type_num1=type_num();
					state._fsp--;
					if (state.failed) return attr_type;
					a=(Token)match(input,Id,FOLLOW_Id_in_declarations248); if (state.failed) return attr_type;
					// myChecker.g:40:23: ( '=' b= expr )?
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==38) ) {
						alt6=1;
					}
					switch (alt6) {
						case 1 :
							// myChecker.g:40:24: '=' b= expr
							{
							match(input,38,FOLLOW_38_in_declarations251); if (state.failed) return attr_type;
							pushFollow(FOLLOW_expr_in_declarations257);
							b=expr();
							state._fsp--;
							if (state.failed) return attr_type;
							}
							break;

					}

					// myChecker.g:40:39: ( ',' c= Id ( '=' d= expr )? )*
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==33) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// myChecker.g:40:40: ',' c= Id ( '=' d= expr )?
							{
							match(input,33,FOLLOW_33_in_declarations262); if (state.failed) return attr_type;
							c=(Token)match(input,Id,FOLLOW_Id_in_declarations268); if (state.failed) return attr_type;
							// myChecker.g:40:51: ( '=' d= expr )?
							int alt7=2;
							int LA7_0 = input.LA(1);
							if ( (LA7_0==38) ) {
								alt7=1;
							}
							switch (alt7) {
								case 1 :
									// myChecker.g:40:52: '=' d= expr
									{
									match(input,38,FOLLOW_38_in_declarations271); if (state.failed) return attr_type;
									pushFollow(FOLLOW_expr_in_declarations277);
									d=expr();
									state._fsp--;
									if (state.failed) return attr_type;
									}
									break;

							}

							}
							break;

						default :
							break loop8;
						}
					}

					match(input,37,FOLLOW_37_in_declarations284); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {
						   if (symtab.containsKey((a!=null?a.getText():null))) {
						       System.out.println("Type Error: " + a.getLine() + 
												  ": Redeclared identifier " + (a!=null?a.getText():null) + ".");
						   } else if ( (type_num1 != (b!=null?((myCheckerParser.expr_return)b).attr_type:0)) &&((b!=null?input.toString(b.start,b.stop):null) != null)) {
								System.out.println("Type Error: " + (b!=null?(b.start):null).getLine() +
											      ": Type mismatch for the two silde operands in an assignment statement.");
								attr_type = -2;
								symtab.put((a!=null?a.getText():null), type_num1);
					       } else {
					           symtab.put((a!=null?a.getText():null), type_num1);
						   }
						   
						   if ((c!=null?c.getText():null) != null){
								if (symtab.containsKey((c!=null?c.getText():null))) {
								System.out.println("Type Error: " + c.getLine() + ": Redeclared identifier " + (c!=null?c.getText():null) );
								} else if (((d!=null?input.toString(d.start,d.stop):null) != null) && (type_num1 != (d!=null?((myCheckerParser.expr_return)d).attr_type:0))) {
									System.out.println("Type Error: " + (d!=null?(d.start):null).getLine() +
													": Type mismatch for the two silde operands in an assignment statement.");
									attr_type = -2;
									symtab.put((c!=null?c.getText():null), type_num1);
								} else {
									symtab.put((c!=null?c.getText():null), type_num1);
								}
						   }	   
						 }
					}
					break;
				case 2 :
					// myChecker.g:67:3: type_char a= Id ( '=' '\\'' ( . ) '\\'' )? ( ',' c= Id ( '=' '\\'' ( . ) '\\'' )? )* ';'
					{
					pushFollow(FOLLOW_type_char_in_declarations293);
					type_char2=type_char();
					state._fsp--;
					if (state.failed) return attr_type;
					a=(Token)match(input,Id,FOLLOW_Id_in_declarations299); if (state.failed) return attr_type;
					// myChecker.g:67:20: ( '=' '\\'' ( . ) '\\'' )?
					int alt9=2;
					int LA9_0 = input.LA(1);
					if ( (LA9_0==38) ) {
						alt9=1;
					}
					switch (alt9) {
						case 1 :
							// myChecker.g:67:21: '=' '\\'' ( . ) '\\''
							{
							match(input,38,FOLLOW_38_in_declarations302); if (state.failed) return attr_type;
							match(input,39,FOLLOW_39_in_declarations304); if (state.failed) return attr_type;
							// myChecker.g:67:29: ( . )
							// myChecker.g:67:30: .
							{
							matchAny(input); if (state.failed) return attr_type;
							}

							match(input,39,FOLLOW_39_in_declarations308); if (state.failed) return attr_type;
							}
							break;

					}

					// myChecker.g:67:39: ( ',' c= Id ( '=' '\\'' ( . ) '\\'' )? )*
					loop11:
					while (true) {
						int alt11=2;
						int LA11_0 = input.LA(1);
						if ( (LA11_0==33) ) {
							alt11=1;
						}

						switch (alt11) {
						case 1 :
							// myChecker.g:67:40: ',' c= Id ( '=' '\\'' ( . ) '\\'' )?
							{
							match(input,33,FOLLOW_33_in_declarations313); if (state.failed) return attr_type;
							c=(Token)match(input,Id,FOLLOW_Id_in_declarations319); if (state.failed) return attr_type;
							// myChecker.g:67:51: ( '=' '\\'' ( . ) '\\'' )?
							int alt10=2;
							int LA10_0 = input.LA(1);
							if ( (LA10_0==38) ) {
								alt10=1;
							}
							switch (alt10) {
								case 1 :
									// myChecker.g:67:52: '=' '\\'' ( . ) '\\''
									{
									match(input,38,FOLLOW_38_in_declarations322); if (state.failed) return attr_type;
									match(input,39,FOLLOW_39_in_declarations324); if (state.failed) return attr_type;
									// myChecker.g:67:60: ( . )
									// myChecker.g:67:61: .
									{
									matchAny(input); if (state.failed) return attr_type;
									}

									match(input,39,FOLLOW_39_in_declarations328); if (state.failed) return attr_type;
									}
									break;

							}

							}
							break;

						default :
							break loop11;
						}
					}

					match(input,37,FOLLOW_37_in_declarations335); if (state.failed) return attr_type;
					if ( state.backtracking==0 ) {
						   if (TRACEON) System.out.println("declarations: type_char Id : declarations");
						 
					  	   if (symtab.containsKey((a!=null?a.getText():null))) 
							   System.out.println("Type Error: " + a.getLine() + ": Redeclared identifier " + (a!=null?a.getText():null));
						   else
							   symtab.put((a!=null?a.getText():null), type_char2);
